# battlebots

./: .cproject  .gitignore  .mxproject  .project  CMakeLists.txt  README.md  RMv3testDemo.ioc  RMv3testDemo.xml  STM32F427IIHx.cmake  STM32F427IIHx_FLASH.ld
Firmware/Inc/: can.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h  tim.h  usart.h
Firmware/Src/: can.c  gpio.c  spi.c  stm32f4xx_hal_timebase_TIM.c  stm32f4xx_it.c  tim.c  usart.c
Inc/: main.h  spi.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h  tim.h  usbd_conf.h
JLinkDebugger/: run.jdebug
MDK-ARM/: JLinkLog.txt  RMv3testDemo.uvguix.Beck  RMv3testDemo.uvoptx  RMv3testDemo.uvprojx  battlebots_regen.uvguix.Beck  battlebots_regen.uvguix.kuang  battlebots_regen.uvoptx  battlebots_regen.uvprojx  startup_stm32f427xx.lst  windows.jdebug
MDK-ARM/battlebots_regen/: battlebots_regen.axf  battlebots_regen.build_log.htm  battlebots_regen.htm  battlebots_regen.lnp  battlebots_regen_battlebots_regen.dep  can.crf  chassis_motors.crf  chassismotors.crf  dma.crf  gpio.crf  main.crf  main_1.crf  pid.crf  pushbutton.crf  spi.crf  stm32f4xx_hal.crf  stm32f4xx_hal_can.crf  stm32f4xx_hal_cortex.crf  stm32f4xx_hal_dma.crf  stm32f4xx_hal_dma_ex.crf  stm32f4xx_hal_flash.crf  stm32f4xx_hal_flash_ex.crf  stm32f4xx_hal_flash_ramfunc.crf  stm32f4xx_hal_gpio.crf  stm32f4xx_hal_msp.crf  stm32f4xx_hal_pwr.crf  stm32f4xx_hal_pwr_ex.crf  stm32f4xx_hal_rcc.crf  stm32f4xx_hal_rcc_ex.crf  stm32f4xx_hal_spi.crf  stm32f4xx_hal_tim.crf  stm32f4xx_hal_tim_ex.crf  stm32f4xx_hal_timebase_tim.crf  stm32f4xx_hal_uart.crf  stm32f4xx_it.crf  system_stm32f4xx.crf  test_can.crf  test_dbus.crf  test_drive.crf  (+2 more)
Mac_toolchain/: STM32F427IIHx_FLASH.ld  battlebots.ioc  cross-compiler.cmake  run.jdebug
Src/: can.c  dma.c  gpio.c  main.c  spi.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c  system_stm32f4xx.c  tim.c  usart.c  usbd_conf.c
(+19 files in other folders)
